chore(serializer-legacy): cleanup and modernize code